[gd_scene load_steps=15 format=3 uid="uid://ddtmob8xtdrl6"]

[ext_resource type="Script" uid="uid://cx7rssjw2itil" path="res://UI/race_ui.gd" id="1_bit1n"]
[ext_resource type="Texture2D" uid="uid://bp448n1df4bon" path="res://UI/Button Prompts/XboxSeriesX_A.png" id="1_vlk8u"]
[ext_resource type="AudioStream" uid="uid://2h7nqbvnb8cu" path="res://Audio/Sfx/KonamiHit.mp3" id="3_0dniu"]
[ext_resource type="FontFile" uid="uid://b8xsi0etksurk" path="res://Fonts/FOT-Rodin Pro B.otf" id="3_1guh7"]
[ext_resource type="FontFile" uid="uid://ckxc1xxfkae17" path="res://Fonts/FOT-Seurat Pro B.otf" id="4_27las"]
[ext_resource type="AudioStream" uid="uid://ckmvc40bel1oe" path="res://Audio/Sfx/idk2.mp3" id="4_ls6kt"]
[ext_resource type="AudioStream" uid="uid://o7qr6te3chlg" path="res://Audio/Sfx/nope.mp3" id="5_6sn7h"]
[ext_resource type="Texture2D" uid="uid://bntjwnvbcn4vx" path="res://UI/Button Prompts/nope.png" id="6_uedqn"]
[ext_resource type="Texture2D" uid="uid://0p7utppalvbf" path="res://UI/speed lines/speedlines1.png" id="10_ed38w"]
[ext_resource type="Texture2D" uid="uid://bdlptbd8bmlup" path="res://UI/speed lines/speedlines2.png" id="11_1roim"]
[ext_resource type="Texture2D" uid="uid://cod0h3d4o163i" path="res://UI/speed lines/speedlines3.png" id="12_aoofs"]

[sub_resource type="Animation" id="Animation_tp7ut"]
resource_name = "SpeedLines"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("10_ed38w"), ExtResource("11_1roim"), ExtResource("12_aoofs")]
}

[sub_resource type="Animation" id="Animation_yhu5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_ed38w")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpj81"]
_data = {
&"RESET": SubResource("Animation_yhu5p"),
&"SpeedLines": SubResource("Animation_tp7ut")
}

[node name="RaceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bit1n")

[node name="SlipFX" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_ed38w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlipFX"]
libraries = {
&"": SubResource("AnimationLibrary_vpj81")
}
speed_scale = 1.5

[node name="QTE" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 274.0
offset_right = -230.40002
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25, 1.25)
alignment = 1

[node name="Prompt1" type="TextureRect" parent="QTE"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt2" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt3" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt4" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt5" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt6" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt7" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="Prompt8" type="TextureRect" parent="QTE"]
layout_mode = 2
texture = ExtResource("1_vlk8u")
stretch_mode = 3

[node name="PlacementLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -131.0
offset_right = 168.0
offset_bottom = 3.0
grow_vertical = 0
theme_override_constants/outline_size = 45
theme_override_fonts/font = ExtResource("3_1guh7")
theme_override_font_sizes/font_size = 98
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinishedHeader" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -10
theme_override_constants/outline_size = 96
theme_override_fonts/font = ExtResource("4_27las")
theme_override_font_sizes/font_size = 128
text = "Finished ?st!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0dniu")
volume_db = -5.0

[node name="SFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ls6kt")
volume_db = -5.0

[node name="nopeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6sn7h")
volume_db = -8.0

[node name="nopeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="nope" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 274.0
offset_right = 178.0
offset_bottom = 398.0
size_flags_horizontal = 4
texture = ExtResource("6_uedqn")

[node name="Countdownlabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 45
theme_override_fonts/font = ExtResource("3_1guh7")
theme_override_font_sizes/font_size = 75
text = "Waiting for players..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
